--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,5 +32,32 @@ body {
 
 #statusLogsModal {
 	padding: 25px;
+  position: fixed;
+  z-index: 1000;
+  left: 0; top: 0;
+  width: 90%; height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
 }
 
+#closeButton  {
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#modalPanel {
+  position: fixed;
+  z-index: 1000;
+  left: 0; top: 0;
+  width: 90%; height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+#modal-contentPanel {
+  background-color: #fff;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
