--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -40,11 +40,12 @@ body {
   background-color: rgba(0,0,0,0.4);
 }
 
-#closeButton  {
+#statusLogsModal #closeButton  {
   float: right;
   font-size: 28px;
   font-weight: bold;
   cursor: pointer;
+  padding-left: 90%;
 }
 
 #modalPanel {
